tasks get? put? delete by id functions, swagger working on tasks
