# controllers/tasks.js
@@ -5,21 +5,28 @@ const {
 
 const addTask = async (req, res) => {
 
-	const { _id: owner } = req.user;
+	const { _id: userId } = req.user;
 
-	const newTask = await Task.create({ ...req.body, owner });
-  const {_id, title, text, priority, deadline, createdAt} = newTask
+	const newTask = await Task.create({ ...req.body, userId });
+  // const {_id, title, text, priority, deadline, createdAt} = newTask
+	return res.status(201).json(newTask);
 	
-  return res.status(201).json({
-    id: _id,
-    title,
-    text,
-    priority,
-    deadline,
-    createdAt,
-    owner
-  });
+  // return res.status(201).json({
+  //   id: _id,
+  //   title,
+  //   text,
+  //   priority,
+  //   deadline,
+  //   createdAt,
+  //   owner
+  // });
 }
+
+const getAllTasks = async (req, res) => {
+	const { _id: owner } = req.user;
+  		const list = await Task.find({ owner }, " -updatedAt");
+		res.status(200).json(list);
+    }
 
 const deleteTask = async (req, res) => {
 	const { id } = req.params;
@@ -33,35 +40,28 @@ const deleteTask = async (req, res) => {
 
 }
 
-const getAllTasks = async (req, res) => {
-	const { _id: owner } = req.user;
-  		const list = await Task.find({ owner }, " -updatedAt");
-		res.json(list);
-    }
+async function getTaskById(req, res) {
+	const { id } = req.params;
+	const taskById = await Task.findById(id);
 
+	if (!taskById) {
+		throw HttpError(404, "Not found");
+	}
+	res.status(200).json(taskById);
+}
 
-// async function getTaskById(req, res) {
-// 	const { id } = req.params;
-// 	const TaskById = await Task.findById(id);
+async function updateTaskById(req, res) {
+	const { id } = req.params;
 
-// 	if (!taskById) {
-// 		throw HttpError(404, "Not found");
-// 	}
-// 	res.json(taskById);
-// }
+	const updatedTask = await Task.findByIdAndUpdate(id, req.body, {
+		new: true,
+	});
 
-// async function updateTaskById(req, res) {
-// 	const { id } = req.params;
-
-// 	const updatedTask = await Task.findByIdAndUpdate(id, req.body, {
-// 		new: true,
-// 	});
-
-// 	if (!updatedTask) {
-// 		throw HttpError(404, "Not found");
-// 	}
-// 	return res.status(200).json(updatedTask);
-// }
+	if (!updatedTask) {
+		throw HttpError(404, "Not found");
+	}
+	return res.status(200).json(updatedTask);
+}
 
 // async function updateStatusTask(req, res) {
 // 	const { id } = req.params;
@@ -81,7 +81,7 @@ module.exports = {
   addTask: ctrlWrapper(addTask),
 	deleteTask: ctrlWrapper(deleteTask),
 	getAllTasks: ctrlWrapper(getAllTasks),
-	// getTaskById: ctrlWrapper(getTaskById),
+	getTaskById: ctrlWrapper(getTaskById),
 	// updateStatusTask: ctrlWrapper(updateStatusTask),
-	// updateTaskById: ctrlWrapper(updateTaskById),
+	updateTaskById: ctrlWrapper(updateTaskById),
 };
