# swagger.json
@@ -115,7 +115,7 @@
 				"responses": {
 					"200": {
 						"description": "OK (Successful operation (redirect to front-end with accessToken, refreshToken and sid in query). Then use GET /user)"
-						},
+					},
 					"400": {
 						"description": "Bad request (Invalid request body or Missing fields)",
 						"content": {}
@@ -297,7 +297,6 @@
 						"image/png": {
 							"schema": {
 								"$ref": "#/components/schemas/AvatarUpdateRequest"
-
 							}
 						}
 					}
@@ -355,8 +354,10 @@
 		},
 		"/tasks": {
 			"post": {
+				"security": [{ "Bearer": [] }],
 				"tags": ["Tasks"],
-				"summary": "Add task",
+				"summary": "Add a single task",
+				"operationId": "addTask",
 				"parameters": [],
 				"requestBody": {
 					"description": "Add Task object",
@@ -364,7 +365,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/AddTaskRequest"
+								"$ref": "#/components/schemas/TaskRequest"
 							}
 						}
 					}
@@ -375,7 +376,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/AddTaskResponse"
+									"$ref": "#/components/schemas/TaskResponse"
 								}
 							}
 						}
@@ -390,64 +391,22 @@
 					}
 				}
 			},
-			"delete": {
-				"tags": ["Tasks"],
-				"summary": "Delete task",
-				"parameters": [],
-				"requestBody": {
-					"description": "Delete task object",
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/deleteTaskRequest"
-							}
-						}
-					}
-				},
-				"responses": {
-					"201": {
-						"description": "Created (Successful operation)",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/AddTaskResponse"
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "Bad request (Invalid request body or Missing fields)",
-						"content": {}
-					},
-					"409": {
-						"description": "Conflict (Email already in use)",
-						"content": {}
-					}
-				}
-		},	
 			"get": {
+				"security": [{ "Bearer": [] }],
 				"tags": ["Tasks"],
-				"summary": "Add task",
+				"summary": "Get all tasks the User has access to",
+				"operationId": "getAllTasks",
 				"parameters": [],
-				"requestBody": {
-					"description": "Add Task object",
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/AddTaskRequest"
-							}
-						}
-					}
-				},
 				"responses": {
-					"201": {
-						"description": "Created (Successful operation)",
+					"200": {
+						"description": "Ok (Successful operation)",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/AddTaskResponse"
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/TaskResponse"
+									}
 								}
 							}
 						}
@@ -461,8 +420,131 @@
 						"content": {}
 					}
 				}
+			}
+},
+			"/tasks/{id}": {
+				"get": {
+					"security": [{ "Bearer": [] }],
+					"tags": ["Tasks"],
+					"summary": "Get single task by id",
+					"operationId": "getTask",
+					"parameters": [
+						{
+							"name": "id",
+							"in": "path",
+							"description": "ID of task to get",
+							"required": true,
+							"schema": {
+								"type": "string"
+							}
+						}
+					],
+					"responses": {
+						"200": {
+							"description": "Ok (Successful operation)",
+							"content": {
+								"application/json": {
+									"schema": {
+										"$ref": "#/components/schemas/TaskResponse"
+									}
+								}
+							}
+						},
+						"400": {
+							"description": "Bad request (Invalid request body or Missing fields)",
+							"content": {}
+						},
+						"409": {
+							"description": "Conflict (Email already in use)",
+							"content": {}
+						}
+					}
+				},
+				"put": {
+					"security": [{ "Bearer": [] }],
+					"tags": ["Tasks"],
+					"summary": "Update single task by id",
+					"operationId": "updateTaskById",
+					"parameters": [
+						{
+							"name": "id",
+							"in": "path",
+							"description": "Id of task to update",
+							"required": true,
+							"schema": {
+								"type": "string"
+							}
+						}
+					],
+					"requestBody": {
+						"description": "Update Task object",
+						"required": true,
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TaskRequest"
+								}
+							}
+						}
+					},
+					"responses": {
+						"200": {
+							"description": "Ok (Successful operation)",
+							"content": {
+								"application/json": {
+									"schema": {
+										"$ref": "#/components/schemas/TaskResponse"
+									}
+								}
+							}
+						},
+						"400": {
+							"description": "Bad request (Invalid request body or Missing fields)",
+							"content": {}
+						},
+						"409": {
+							"description": "Conflict (Email already in use)",
+							"content": {}
+						}
+					}
+				},
+			"delete": {
+				"security": [{ "Bearer": [] }],
+				"tags": ["Tasks"],
+				"summary": "Delete a single task by id",
+				"operationId": "deleteTask",
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "ID of task to delete",
+						"required": true,
+						"schema": {
+							"type": "string"
+
+						}
+					}
+				],
+				"responses": {
+					"204": {
+						"description": "No Content (Successful operation)"
+					},
+					"400": {
+						"description": "Bad request (No token / Invalid task id)",
+						"content": {}
+					},
+					"401": {
+						"description": "Not authorized (Invalid token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
+						"content": {}
+					}
+				}
+			}
 		}
-	}},
+	},
 	"components": {
 		"schemas": {
 			"RegistrationRequest": {
@@ -581,7 +663,6 @@
 						"description": "User's color theme",
 						"example": "dark"
 					}
-
 				}
 			},
 			"ProfileUpdateRequest": {
@@ -619,7 +700,7 @@
 				"properties": {
 					"file": {
 						"type": "string",
-								"format": "binary"
+						"format": "binary"
 					}
 				}
 			},
@@ -654,10 +735,10 @@
 					}
 				}
 			},
-			"AddTaskRequest": {
+			"TaskRequest": {
 				"type": "object",
 				"properties": {
-					"title": {
+						"title": {
 						"type": "string",
 						"description": "Task title",
 						"example": "My first important task"
@@ -680,13 +761,18 @@
 					}
 				}
 			},
-			"AddTaskResponse": {
+			"TaskResponse": {
 				"type": "object",
 				"properties": {
-					"id": {
+					"_id": {
 						"type": "string",
 						"description": "Task id",
-						"example": "649343d3fd8c37bb6a6b8958"
+						"example": "64955868336703c3b2a3b065"
+					},
+					"_userId": {
+						"type": "string",
+						"description": "Task id",
+						"example": "648f22dda2d8f8537d580812"
 					},
 					"title": {
 						"type": "string",
@@ -711,7 +797,12 @@
 					},
 					"createdAt": {
 						"type": "string",
-						"description": "Task deadline",
+						"description": "Task creation time",
+						"example": "2023-06-21T18:25:45.953+00:00"
+					},
+					"updatedAt": {
+						"type": "string",
+						"description": "Task task re-new time",
 						"example": "2023-06-21T18:25:45.953+00:00"
 					}
 				}
